feat: external diff tool, refactor: help