@@ -3,10 +3,16 @@ package com.github.konstantinevashalomidze;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
+import java.io.BufferedReader;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.IOException;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.security.SecureRandom;
 import java.security.cert.X509Certificate;
 import java.time.Duration;
@@ -35,15 +41,37 @@ public class KHttpDiff {
             return;
         }
 
-        if (!options.containsKey("method")) {
-            System.err.println(colorize(AnsiColor.RED, "Error: '-method' is required"));
-            printHelp();
-            return;
-        }
+        String method = options.getOrDefault("method", "GET");
+        String body = options.getOrDefault("body", "");
+        String host = options.getOrDefault("host", "");
+        String userAgent = options.getOrDefault("agent", "khttpdiff/0.1");
+        boolean insecure = options.containsKey("insecure");
+        String diffApp = options.getOrDefault("diffapp", "");
+        String singleHeader = options.getOrDefault("header", "");
+        String headersFile = options.getOrDefault("headers", "");
 
-        String method = options.get("method");
         Set<String> excludeHeaders = parseExcludeHeaders(options.getOrDefault("ignore", ""));
         mono = options.containsKey("mono");
+
+        Map<String, String> extraHeaders = new HashMap<>();
+        if (!singleHeader.isEmpty()) {
+            String[] parts = singleHeader.split(":", 2);
+            if (parts.length == 2) {
+                extraHeaders.put(parts[0], parts[1]);
+            } else {
+                System.out.println(colorize(AnsiColor.YELLOW, "Invalid header format: " + singleHeader));
+                return;
+            }
+        }
+
+        if (!headersFile.isEmpty()) {
+            extraHeaders.putAll(parseHeadersFromFile(headersFile));
+        }
+
+        if (!host.isEmpty()) {
+            System.out.println(colorize(AnsiColor.YELLOW, "Host: " + host));
+        }
+
 
         System.out.println(colorize(AnsiColor.YELLOW, "Comparing ") +
                 colorize(AnsiColor.MAGENTA, method) +
@@ -55,8 +83,10 @@ public class KHttpDiff {
         System.out.println(colorize(AnsiColor.YELLOW, "Making requests..."));
         System.out.println();
 
-        CompletableFuture<HttpResponse<String>> future1 = makeHttpRequestAsync(method, urls.get(0), body, headers);
-        CompletableFuture<HttpResponse<String>> future2 = makeHttpRequestAsync(method, urls.get(1), body, headers);
+        CompletableFuture<HttpResponse<String>> future1 = makeHttpRequestAsync(host, userAgent, insecure,
+                method, urls.getFirst(), body, extraHeaders);
+        CompletableFuture<HttpResponse<String>> future2 = makeHttpRequestAsync(host, userAgent, insecure,
+                method, urls.getLast(), body, extraHeaders);
 
 
         try {
@@ -70,7 +100,14 @@ public class KHttpDiff {
 
             boolean hasSameStatusCodes = compareStatusCodes(result1, result2);
             boolean hasSameHeaders = compareHeaders(result1, result2, excludeHeaders);
-            boolean hasSameBodies = compareBodies(result1, result2);
+            boolean hasSameBodies = compareBodies(result1, result2, urls.getFirst(), urls.getLast(), diffApp);
+
+
+            if (!notSame && hasSameHeaders && hasSameStatusCodes && hasSameBodies) {
+                System.out.println(colorize(AnsiColor.YELLOW, "Requests are the same"));
+            } else {
+                System.out.println(colorize(AnsiColor.YELLOW, "Requests are different"));
+            }
 
         } catch (Exception e) {
             System.out.println(colorize(AnsiColor.YELLOW, "Error getting results " + e.getMessage()));
@@ -82,15 +119,27 @@ public class KHttpDiff {
     }
 
     private void printHelp() {
-        System.out.println(colorize(AnsiColor.YELLOW, "khttpdiff - Compare HTTP requests"));
-        System.out.println(colorize(AnsiColor.YELLOW, "Usage: khttpdiff [options] url1 url2"));
-        System.out.println();
-        System.out.println(colorize(AnsiColor.YELLOW, "Options:"));
-        System.out.println(colorize(AnsiColor.YELLOW, "    -method <method>       *HTTP method to use (GET, POST, PUT, DELETE)"));
-        System.out.println(colorize(AnsiColor.YELLOW, "    -ignore <header>        Comma-separated list of headers to ignore"));
-        System.out.println(colorize(AnsiColor.YELLOW, "    -mono                   Monochrome output"));
-        System.out.println(colorize(AnsiColor.YELLOW, "    -help                   Show this help message"));
-
+        System.err.println("HttpDiff - Compare HTTP responses");
+        System.err.println("Usage: httpdiff [options] url1 url2");
+        System.err.println();
+        System.err.println("Options:");
+        System.err.println("  -method <method>    HTTP method (default: GET)");
+        System.err.println("  -body <data>        Request body for POST/PUT");
+        System.err.println("  -host <host>        Host header to send");
+        System.err.println("  -agent <ua>         User-Agent header (default: httpdiff/0.1)");
+        System.err.println("  -ignore <headers>   Comma-separated headers to ignore");
+        System.err.println("  -header <hdr>       Single header (Key: Value)");
+        System.err.println("  -headers <file>     File with headers (one per line)");
+        System.err.println("  -insecure           Allow insecure SSL connections");
+        System.err.println("  -diffapp <app>      Diff tool to use for body differences");
+        System.err.println("  -mono               Monochrome output");
+        System.err.println("  -help               Show this help");
+        System.err.println();
+        System.err.println("Examples:");
+        System.err.println("  httpdiff https://api1.example.com/v1/users https://api2.example.com/v1/users");
+        System.err.println("  httpdiff -method POST -body '{\"name\":\"test\"}' -header 'Content-Type: application/json' \\");
+        System.err.println("           https://api1.example.com/users https://api2.example.com/users");
+        System.err.println("  httpdiff -insecure -diffapp vimdiff https://localhost:8443/api https://localhost:9443/api");
     }
 
     private HttpClient createHttpClient(boolean insecure) {
@@ -189,12 +238,14 @@ public class KHttpDiff {
             System.out.println("Different status codes:");
             System.out.println("    " + colorize(AnsiColor.RED, String.valueOf(response1.statusCode())));
             System.out.println("    " + colorize(AnsiColor.GREEN, String.valueOf(response2.statusCode())));
+            System.out.println();
             notSame = true;
             return false;
         }
 
         System.out.println(colorize(AnsiColor.YELLOW, "Status codes identical: ") +
                 colorize(AnsiColor.MAGENTA, String.valueOf(response1.statusCode())));
+        System.out.println();
         return true;
     }
 
@@ -247,7 +298,9 @@ public class KHttpDiff {
         for (String header : response1.headers().map().keySet()) {
             if (!excludeHeaders.contains(header)) {
                 if (!response2.headers().map().containsKey(header)) {
-                    System.out.println("Header " + colorize(AnsiColor.GREEN, header) + " only in response:");
+                    System.out.println(colorize(AnsiColor.YELLOW, "Header ") +
+                            colorize(AnsiColor.GREEN, header) +
+                            colorize(AnsiColor.YELLOW, " only in response:"));
                     System.out.println("    " + colorize(color, response1.headers().map().get(header).toString()));
                     System.out.println();
                     notSame = true;
@@ -258,23 +311,83 @@ public class KHttpDiff {
 
 
 
-    private boolean compareBodies(HttpResponse<String> response1, HttpResponse<String> response2) {
+    private boolean compareBodies(HttpResponse<String> response1, HttpResponse<String> response2,
+                                  String url1, String url2, String diffApp) {
         if (response1.body().length() != response2.body().length()) {
             System.out.println(colorize(AnsiColor.YELLOW, "Bodies are different (different length)"));
             System.out.println("    " + colorize(AnsiColor.RED, response1.body().length() + " Length"));
             System.out.println("    " + colorize(AnsiColor.GREEN, response2.body().length() + " Length"));
+            System.out.println();
             notSame = true;
+
+            handleBodyDiff(response1.body(), response2.body(), url1, url2, diffApp);
             return false;
         }
 
         if (!response1.body().equals(response2.body())) {
             System.out.println(colorize(AnsiColor.YELLOW, "Bodies are different (same length, different content)"));
+            System.out.println();
             notSame = true;
+
+            handleBodyDiff(response1.body(), response2.body(), url1, url2, diffApp);
             return false;
         }
 
-        System.out.println(colorize(AnsiColor.YELLOW, "Bodies identical"));
+        System.out.println(colorize(AnsiColor.YELLOW, "Bodies are identical"));
+        System.out.println();
         return true;
+    }
+
+
+    private void handleBodyDiff(String body1, String body2, String url1, String url2, String diffApp) {
+        try {
+            Path tempFile1 = Files.createTempFile("khttpdiff", ".tmp");
+            Path tempFile2 = Files.createTempFile("khttpdiff", ".tmp");
+
+            // Deletes in case of crash
+            tempFile1.toFile().deleteOnExit();
+            tempFile2.toFile().deleteOnExit();
+
+            Files.write(tempFile1, body1.getBytes());
+            Files.write(tempFile2, body2.getBytes());
+
+            System.out.println(colorize(AnsiColor.YELLOW, "Body differences found:"));
+            System.out.println("    " + colorize(AnsiColor.GREEN, "Wrote to " + tempFile1));
+            System.out.println("    " + colorize(AnsiColor.GREEN, "Wrote to " + tempFile2));
+            System.out.println();
+
+            // if diff app is specified run it
+            if (diffApp != null && !diffApp.isEmpty()) {
+                System.out.println(colorize(AnsiColor.YELLOW, "Running diff tool:" + diffApp));
+                System.out.println();
+                Process process = new ProcessBuilder(
+                        diffApp,
+                        tempFile1.toString(),
+                        tempFile2.toString()
+                        ).inheritIO() // Show diff output in our console
+                        .start();
+
+                int exitCode = process.waitFor();
+                System.out.println(colorize(AnsiColor.YELLOW, "Diff tool exited with code: " + exitCode));
+                System.out.println();
+
+                // Files are already processed no longer necessary
+                Files.delete(tempFile1);
+                Files.delete(tempFile2);
+            } else {
+                System.out.println(colorize(AnsiColor.YELLOW,"Use an external tool to compare: "));
+                System.out.println(colorize(AnsiColor.YELLOW, "    diff " + tempFile1 + " " + tempFile2));
+                System.out.println(colorize(AnsiColor.YELLOW, "Or specify a diff tool with -diffapp"));
+                System.out.println();
+            }
+
+        } catch (IOException e) {
+            System.out.println(colorize(AnsiColor.YELLOW, "Something went wrong during diff " + e.getMessage()));
+            System.out.println();
+        } catch (InterruptedException e) {
+            System.out.println(colorize(AnsiColor.YELLOW, "Diff process interrupted"));
+            System.out.println();
+        }
     }
 
 
@@ -297,6 +410,33 @@ public class KHttpDiff {
 
         return urls;
     }
+
+    private Map<String, String> parseHeadersFromFile(String fileName) {
+        Map<String, String> headers = new HashMap<>();
+
+        if (fileName == null || fileName.isEmpty())
+            return headers;
+
+        try (BufferedReader reader = new BufferedReader(new FileReader(fileName))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if (line.isEmpty() || line.startsWith("//"))
+                    continue;
+                String[] parts = line.split(":", 2);
+                if (parts.length == 2) {
+                    headers.put(parts[0], parts[1]);
+                } else {
+                    System.out.println(colorize(AnsiColor.YELLOW, "Warning: Invalid header line " + line));
+                }
+            }
+        } catch (IOException e) {
+            System.out.println(colorize(AnsiColor.YELLOW, "Error reading headers file: " + e.getMessage()));
+        }
+
+
+        return headers;
+    }
+
 
 
     enum AnsiColor {
